[project]
name = "hierarchicalcausalmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "causalgraphicalmodels",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "polars>=1.37.0",
]

[tool.uv.sources]
causalgraphicalmodels = { git = "https://github.com/janisaiad/causalgraphicalmodels.git" }
